# mcp_python_server

./: .dockerignore  .env.development  .env.example  .flake8  .gitignore  CLAUDE.md  CLAUDE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_ROADMAP.md  DIAGRAM_VISUALIZATION_SUMMARY.md  DOCKER.md  Dockerfile  ENHANCED_HARDWARE_DISCOVERY.md  FILTERING_EDGE_CASES.md  HARDWARE_DISCOVERY_TEST_RESULTS.md  INFRASTRUCTURE_DIAGRAM.md  INFRASTRUCTURE_INTELLIGENCE_SUMMARY.md  INSTALLATION_REQUIREMENTS.md  MANUAL_TESTING.md  MCP_HTTP_SESSION_GUIDE.md  NEXT_STEPS.md  NONSENSICAL_QUERY_HANDLING.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_MCP_CORE.md  VSCODE_INTEGRATION_TESTS.md  build-docker.sh  build-wine.sh  build.sh  build_all_platforms.py  build_executable.py  build_executable_fast.py  build_pyinstaller.py  chat_server_direct.py  claude_desktop_config.json  claude_desktop_config_debug.json  config.py  docker-compose.minimal.yml  docker-compose.test.yml  (+25 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: backup_strategy.md  bare_metal_proxmox_testing.md  portable_deployment_strategy.md
.github/workflows/: build-executables.yml  ci.yml  (+5 more)
docs/: BUILD.md  LXD_INTEGRATION_DESIGN.md  README.md  modern-homelab-mcp-architecture.md  package-manager-design.md  package-manager-usage.md  publishing-packages.md
examples/: advanced_mcp_client.py  example_mcp_client.py  test_profiles.py  test_wizard.py
inventory/: homelab-topology.json  last-discovery.json  proxmox-resources.json
profiles/: profiles.json
scripts/: check_vscode_environment.py  db_manager.py  debug_integration_tests.py  run-integration-tests.sh  run_websocket_test.sh  setup_wsl.sh
tests/: README.md  TEST_COMMANDS.md  TEST_COVERAGE.md  WIZARD_TEST_CHECKLIST.md  __init__.py  conftest.py  debug_server.py  simple_test.py  test_agent.py  test_agent_fixed.py  test_agent_simple.py  test_ai_vs_explicit_filtering.py  test_database.py  test_direct.py  test_filtering_edge_cases.py  test_hardware_discovery.py  test_infrastructure_visualizer.py  test_mcp_client.py  test_nonexistent_queries.py  test_ollama.py  test_secure_storage.py  test_server.py  test_simple_integration.py  test_sitemap.py  test_ssh_tools.py  test_subprocess.py  test_token_creation.py  test_tools.py  test_vm_manager.py  test_vm_operations.py  test_vm_providers.py  test_websocket.py
web-client/: CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  proxy-server.cjs  proxy-server.js  proxy-server.mjs
(+153 files in other folders)
