[project]
name = "mcp-python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.1",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "ollama>=0.4.4",
    "httpx>=0.28.1",
    "rich>=13.10.5",
    "python-dotenv>=1.0.1",
    "websockets>=14.1",
    "aiohttp>=3.11.11",
    "aiofiles>=24.1.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
secure = [
    "keyring>=25.0.0",  # For system keyring support
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.6",  # Mock aiohttp requests
]
