[project]
name = "homelab-mcp-server"
version = "0.2.0"
description = "MCP server for homelab VM infrastructure management with service installation framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.1",
    "pyyaml>=6.0",
    "asyncssh>=2.14.0",
    "jsonschema>=4.24.0",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "rich>=13.10.5",
]

[project.optional-dependencies]
monitoring = [
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
]
automation = [
    "ansible>=2.9.0",
    "paramiko>=3.0.0",
]
ai = [
    "ollama>=0.4.4",
]
security = [
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
homelab-mcp = "homelab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/homelab_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.6",
    "nuitka>=2.7.12",
    "pyinstaller>=6.14.2",
]

[tool.uv.sources]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''
